# RSA_face_detection

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  image_file_opt.cpp  image_file_opt.hpp  main.cpp
include/: config.hpp
model/model_def/ResNet_3b_s16_f2r/: test.prototxt
model/model_def/ResNet_3b_s16_fm2fm_pool2_deep/: test.prototxt
model/model_def/res_pool2/: test.prototxt
src/: CMakeLists.txt  config.hpp  inf_rsa_face_detection_api.cpp  inf_rsa_face_detection_api.hh  rsa_face_detection.cpp  rsa_face_detection.hpp  rsa_util.cpp  rsa_util.hpp
